# ChangeLog for www-client/mozilla-firefox
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.411 2008/06/17 18:55:07 armin76 Exp $

*mozilla-firefox-3.0 (17 Jun 2008)

  17 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-3.0_rc3.ebuild, +mozilla-firefox-3.0.ebuild:
  Version bump, wrt #227853, remove old

  17 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-3.0_rc3.ebuild:
  Add missing dep on pkg-config

*mozilla-firefox-3.0_rc3 (12 Jun 2008)

  12 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-3.0_rc1-r1.ebuild, -mozilla-firefox-3.0_rc2.ebuild,
  +mozilla-firefox-3.0_rc3.ebuild:
  Version bump, remove old

*mozilla-firefox-3.0_rc2 (05 Jun 2008)

  05 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  +mozilla-firefox-3.0_rc2.ebuild:
  Version bump

*mozilla-firefox-3.0_rc1-r1 (21 May 2008)

  21 May 2008; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-3.0_beta5-r4.ebuild, -mozilla-firefox-3.0_rc1.ebuild,
  +mozilla-firefox-3.0_rc1-r1.ebuild:
  Revision bump to try to fix the wrapper thing, remove old

  20 May 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-3.0_beta5-r4.ebuild, mozilla-firefox-3.0_rc1.ebuild:
  Fix sqlite dep

  17 May 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-3.0_rc1.ebuild:
  Raise nspr/nss dep

*mozilla-firefox-3.0_rc1 (17 May 2008)

  17 May 2008; Raúl Porcel <armin76@gentoo.org>
  +mozilla-firefox-3.0_rc1.ebuild:
  Version bump

  15 May 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-2.0.0.11.ebuild, mozilla-firefox-2.0.0.14.ebuild,
  mozilla-firefox-3.0_beta5-r4.ebuild:
  Fix HOMEPAGE, thanks to welpie

  15 May 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-3.0_beta5-r4.ebuild:
  Minor fixes

*mozilla-firefox-3.0_beta5-r4 (15 May 2008)

  15 May 2008; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-3.0_beta5-r3.ebuild,
  +mozilla-firefox-3.0_beta5-r4.ebuild: