@@ -9,3 +9,5 @@ pref("browser.backspace_action",           0);
 pref("browser.urlbar.hideGoButton",        true);
 pref("accessibility.typeaheadfind",        true);
 pref("browser.startup.homepage",           "http://www.gentoo.org/");
+pref("browser.shell.checkDefaultBrowser",  false); 
+pref("browser.EULA.override",              true); 
